[tool.poetry]
name = "hw 12-2"
version = "0.1.0"
description = ""
authors = ["Valera Babkin <valera.babkin.13@mail.ru>"]
readme = "README.md"
packages = [{include = "hw 12"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
attrs = "22.2.0"
colorama = "0.4.6"
coverage = "7.0.5"
iniconfig = "2.0.0"
packaging = "23.0"
pluggy = "1.0.0"
pytest = "7.2.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
